--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "update": "npm install"
+    "update": "npm install",
+    "nodemon_start": "nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -21,6 +22,8 @@
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-nodeunit": "^0.4.1",
-    "grunt-contrib-uglify": "^0.11.1"
+    "grunt-contrib-uglify": "^0.11.1",
+    "gulp": "^3.9.1",
+    "laravel-elixir": "^5.0.0"
   }
 }
